docs: correctness-supervision tooling (detekt, domain tests, Lincheck)
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>